name:                elm-pwm-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/elm-pwm-server#readme
license:             MIT
license-file:        LICENSE
author:              schroffl
maintainer:          schroffl@users.noreply.github.com
copyright:           2017 schroffl
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Entry
                     , Diff
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable elm-pwm-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , elm-pwm-server
  default-language:    Haskell2010

test-suite elm-pwm-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , elm-pwm-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/elm-pwm-server
